Mon Jul 23 11:18:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_State.{h,cpp,inl}:
          Removed friend with GIOP_Message_Base and provided inline
          accessor methods. Removed missing_data_ member, it was not
          used at all

        * tao/GIOP_Message_Base.cpp:
          Use accessor methods of GIOP_Message_State because we are
          not a friend anymore

Mon Jul 23 09:02:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
        * tao/GIOP_Message_Generator_Parser_12.cpp:
        * tao/On_Demand_Fragmentation_Strategy.cpp:
          get_version doesn't have a return value anymore

Mon Jul 23 05:32:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Security/SL2_SecurityManager.cpp:
          Commented out non reachable code to resolve warnings
          on OpenVMS

Sun Jul 22 13:06:14 UTC 2007  Martin Corino <mcorino@remedy.nl>

        * tests/ORB_Local_Config/Two_DLL_ORB/Two_DLL_ORB.mpc:
          Added small verbatim section to make this test build on OpenVMS.

Fri Jul 20 15:03:14 UTC 2007  Vadym Ridosh  <vridosh@prismtech.com>

        * tao/Strategies/DIOP_Connector.cpp:
        * tao/Strategies/DIOP_Transport.cpp:
        * tao/Strategies/DIOP_Acceptor.cpp:
        * tao/Strategies/DIOP_Connection_Handler.h:
        * tao/Strategies/DIOP_Connection_Handler.cpp:
        * tao/Strategies/DIOP_Transport.h:
          Fixed potential memory leaks while DIOP_Connection_Handler
          is being created in DIOP_Acceptor::open_i and
          DIOP_Connector::make_connection. Made DIOP even more look
          like IIOP. Fixed warning genereated by MS VS in
          DIOP_Acceptor::parse_options.

Fri Jul 20 09:42:40 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/POA/Forwarding/*:
        * test/POA/Forwarding/*:
          Moved this example to tests

        * configure.ac
        * examples/POA/Makefile.am: